--- a/khl/coverletter/coverletter-cuhk.tex
+++ b/khl/coverletter/coverletter-cuhk.tex
@@ -132,7 +132,7 @@ My interdisciplinary academic background in physics, mathematics, social science
 
 One of my key strengths lies in my strong IT skills. I possess extensive experience in analyzing scientific and social science data, and I have actively contributed to various open source software projects using multiple programming languages. Furthermore, I have developed a simulation game from scratch, which has allowed me to explore the potential of game development in promoting open science and citizen science. An example of this is the ``Software Horror Escape Room'' game developed by the library staff in the Netherlands regarding the publication of academic software. I believe my IT skills could be valuable assets in providing digital services, improving open science infrastructure and engaging with the academic community.
 
-Although I may not have professional experience as a librarian, my unique combination of experiences and skills sets me apart for this position. I am eager to learn any additional traditional librarian skills that may be required. Thank you for considering my application. Currently, I am located in Hong Kong until at least early April. I look forward to the opportunity to discuss my qualifications further.
+Although I may not have professional experience as a librarian, my unique combination of experiences and skills sets me apart for this position. I am eager to learn any additional traditional librarian skills that may be required. Thank you for considering my application. Currently, I am in Hong Kong until at least early April. I look forward to the opportunity to discuss my qualifications further.
 
 %\lettersection{Why Me?}
 
