--- a/khl/coverletter/coverletter-hku.tex
+++ b/khl/coverletter/coverletter-hku.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Delft University of Technology}
-  {Delft}
+  {Faculty of Arts}
+  {University of Hong Kong}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Research Software Engineer}
+\lettertitle{Job Application for Senior Software Engineer/Software Engineer (at the rank of IT Manager/IT Officer)}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,15 +122,20 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my enthusiastic interest in the "Research Software Engineer" position at TU Delft. As a dedicated researcher and software developer, I am excited about the prospect of leveraging my skills to contribute to scientific software projects.
+I am writing to express my enthusiastic interest in the "Software Engineer" position at Hong Kong University. As a social scientist and software developer, I am deeply passionate about creating software solutions that cater to the needs of the Social Sciences and Humanities. As I am finishing my Ph.D., I am excited about the prospect of leveraging my skills to contribute to the Arts Technology Lab and make a meaningful impact in this field.
 
-My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well with the role. I have a proven track record in multiple technical domains, including proficiency in C, Python, SQL, Linux systems, and simulations. My commitment to excellence is evident in the development of a sophisticated agent-based simulation framework and a game using Kotlin. The framework, designed with a strong foundation in physics, includes proper design patterns, extensive unit/integration tests, and comprehensive documentation, showcasing my capability as a competent developer.
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well with the role. I have a proven track record in multiple technical domains, including proficiency in C, Python, SQL, Linux systems, and simulations. One of my flagship projects is a sophisticated agent-based simulation framework and a game written Kotlin. The framework, designed with a strong foundation in physics, includes proper design patterns, extensive unit/integration tests, and comprehensive documentation. This project showcases my ability to independently translate complex academic ideas into well-designed software products.
 
-In addition to my academic pursuits, I have been actively engaged in open-source projects. These experiences have honed my abilities in learning, debugging, and contributing to unfamiliar codebases, reflecting my passion for open-source software and my readiness to embrace novel challenges.
+In addition to my academic pursuits, I am an active contributor to open-source projects. I regularly contribute bug fixes and introduce new features to various software that I use on a daily basis. These experiences have sharpened my skills in learning, debugging, and collaborating with unfamiliar technologies and codebases, demonstrating my readiness to tackle new challenges head-on.
 
-Throughout my academic journey, I have thrived in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have also taken the initiative to organize workshops and actively participate in events to promote open science, open-source principles, and FAIR data practices. These experiences have equipped me to excel in collaborative environments and contribute effectively to cross-functional teams.
+While my educational background may not be in computer science, I have consistently demonstrated my ability to self-study and acquire necessary computer science knowledge whenever required. For instance, during the development of my simulation framework, I diligently studied algorithm optimization and coroutines to enhance its performance. I am confident in my aptitude to quickly grasp and apply any new knowledge that is relevant to the work at the Arts Technology Lab.
 
-Thank you for considering my application. I eagerly anticipate the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at TU Delft.
+Throughout my academic journey, I have excelled in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have taken the initiative to organize workshops and actively participate in events promoting open science, open-source principles, and FAIR data practices. These experiences have equipped me with the ability to thrive in collaborative environments and contribute effectively to cross-functional teams.
+
+Thank you for considering my application. I am eager for the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at Hong Kong University. I am confident that my unique blend of social science expertise and software development skills would make me a valuable asset to the Arts Technology Lab.
+
+
+%\lettersection{Why Me?}
 
 \end{cvletter}
 
