--- a/khl/coverletter/coverletter-richemont.tex
+++ b/khl/coverletter/coverletter-richemont.tex
@@ -58,7 +58,7 @@
 \position{Phd Candidate}
 %\address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
 
-\mobile{(+852) 9171-2155}
+\mobile{(+31) 6-2184-1392}
 \email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Delft University of Technology}
-  {Delft}
+  {Richemont}
+  {Hong Kong}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Research Software Engineer}
+\lettertitle{Job Application for Senior Analyst / Assistant Manager, Workforce Analysis, Cost Planning \& Controlling - Cartier}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,15 +122,22 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my enthusiastic interest in the "Research Software Engineer" position at TU Delft. As a dedicated researcher and software developer, I am excited about the prospect of leveraging my skills to contribute to scientific software projects.
+I am writing to express my enthusiastic interest in the "Senior Analyst / Assistant Manager, Workforce Analysis, Cost Planning \& Controlling - Cartier" position at Richemont.
 
-My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well with the role. I have a proven track record in multiple technical domains, including proficiency in C, Python, SQL, Linux systems, and simulations. My commitment to excellence is evident in the development of a sophisticated agent-based simulation framework and a game using Kotlin. The framework, designed with a strong foundation in physics, includes proper design patterns, extensive unit/integration tests, and comprehensive documentation, showcasing my capability as a competent developer.
 
-In addition to my academic pursuits, I have been actively engaged in open-source projects. These experiences have honed my abilities in learning, debugging, and contributing to unfamiliar codebases, reflecting my passion for open-source software and my readiness to embrace novel challenges.
+As a dedicated researcher and accomplished software developer with a strong foundation in data-oriented challenges, I am eager to leverage my skills and expertise in a practical business setting through this role.
 
-Throughout my academic journey, I have thrived in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have also taken the initiative to organize workshops and actively participate in events to promote open science, open-source principles, and FAIR data practices. These experiences have equipped me to excel in collaborative environments and contribute effectively to cross-functional teams.
+My journey began in the realm of physics, where I embarked on rigorous data analytical research involving complex astronomical data. This experience has honed my proficiency in C, Python, Linux systems, supercomputing, and simulations. Building upon this foundation, my PhD research led me to the exciting field of computational social science. Notably, I conducted projects analyzing gender biases in academic funding application systems, solidifying my expertise in Python, pandas, SQL, and databases.
 
-Thank you for considering my application. I eagerly anticipate the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at TU Delft.
+To continuously broaden my skill set, I dedicated substantial effort to crafting a sophisticated simulation framework and developing a game using Kotlin, a language closely related to Java. These undertakings underscore my adaptability to diverse object-oriented languages and frameworks, a trait I believe is crucial in effectively addressing evolving data challenges.
+
+In parallel with my academic pursuits, I have actively contributed to open-source projects. This evolution from a scientific programmer to a versatile software engineer highlights my commitment to excellence in software development and my ability to embrace new challenges.
+
+Throughout my academic journey, I collaborated with individuals from diverse cultural backgrounds, cultivating strong teamwork and communication skills. This experience has equipped me to thrive in collaborative environments and to effectively contribute to cross-functional teams.
+
+I am excited about the prospect of bringing my data analytical and software engineering skills to the role of data engineer at Sun Hung Kai Properties. The opportunity to contribute to your team's innovative projects and make a meaningful impact aligns perfectly with my aspirations. I am eagerly anticipating the chance to discuss how my background and expertise align with your company's vision and needs.
+
+Thank you for considering my application. I look forward to the opportunity to further discuss my qualifications in an interview.
 
 \end{cvletter}
 
