--- a/khl/resume/resume-jetbrain.tex
+++ b/khl/resume/resume-jetbrain.tex
@@ -148,7 +148,7 @@ Passionate about advancing the Kotlin language/ecosystem.
       {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
-        \resumeItem{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Implemented an HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
       \resumeItemListEnd
