--- a/khl/resume/resume-original.tex
+++ b/khl/resume/resume-original.tex
@@ -146,7 +146,7 @@
       {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
-        \resumeItem{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Implemented an HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
         \resumeItem{Created utility-based AI to determine actions from complex observations}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
