--- a/khl/cv/contents/experience.tex
+++ b/khl/cv/contents/experience.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
-        \item{Implemented a HTTP-based server-client architecture and user-friendly graphical interfaces for PC and Android}
+        \item{Implemented an HTTP-based server-client architecture and user-friendly graphical interfaces for PC and Android}
         \item{Created utility-based AI to determine actions from complex observations}
         \item{Managed a codebase with 60K+ lines of code via Git}
         \item{Presented the game at various conferences, including FOSDEM and KotlinConf}
