--- a/khl/cv/contents/skills.tex
+++ b/khl/cv/contents/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Techinical Skills}
+\cvsection{Technical Skills}
 
 
 %-------------------------------------------------------------------------------
