Update cover letter hku

--- a/khl/coverletter/coverletter-hku.tex
+++ b/khl/coverletter/coverletter-hku.tex
@@ -128,14 +128,11 @@ My academic journey has been a unique blend of physics, astrophysics, and comput
 
 In addition to my academic pursuits, I am an active contributor to open-source projects. I regularly contribute bug fixes and introduce new features to various software that I use on a daily basis. These experiences have sharpened my skills in learning, debugging, and collaborating with unfamiliar technologies and codebases, demonstrating my readiness to tackle new challenges head-on.
 
-While my educational background may not be in computer science, I have consistently demonstrated my ability to self-study and acquire necessary computer science knowledge whenever required. For instance, during the development of my simulation framework, I diligently studied algorithm optimization and coroutines to enhance its performance. I am confident in my aptitude to quickly grasp and apply any new knowledge that is relevant to the work at the Arts Technology Lab.
+While my educational background may not be in computer science, I have consistently demonstrated my ability to self-study and acquire necessary computer science knowledge whenever required. For instance, during the development of my simulation framework, I studied algorithm optimization and coroutines to enhance its performance. I am confident in my aptitude to quickly grasp and apply any new knowledge that is relevant to the work at the Arts Technology Lab.
 
-Throughout my academic journey, I have excelled in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have taken the initiative to organize workshops and actively participate in events promoting open science, open-source principles, and FAIR data practices. These experiences have equipped me with the ability to thrive in collaborative environments and contribute effectively to cross-functional teams.
+Throughout my academic journey, I have excelled in diverse, cross-cultural collaborations, honing my teamwork and communication skills. I have taken the initiative to organize technical workshops for non-technical people and actively participate in events promoting open science. These experiences have equipped me with the ability to thrive in collaborative environments and contribute effectively to cross-functional teams.
 
-Thank you for considering my application. I am eager for the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at Hong Kong University. I am confident that my unique blend of social science expertise and software development skills would make me a valuable asset to the Arts Technology Lab.
-
-
-%\lettersection{Why Me?}
+Thank you for considering my application. I am eager for the opportunity to discuss my qualifications further in an interview and explore how my skills and passion align with the exciting work at Hong Kong University. I am confident that my unique blend of academic expertise and software development skills would make me a valuable addition to the Arts Technology Lab.
 
 \end{cvletter}
 
