Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -124,6 +124,9 @@
 
 %-----------EDUCATION-----------
 \section{Summary}
+Social science and physics researcher with a deep passion in education. 
+Experienced in teaching talented and underperforming students.
+Dedicated to providing additional Physics Olympiad or STEAM training.
 
 \section{Education}
   \resumeSubHeadingListStart
@@ -148,76 +151,53 @@
       {Leiden University}{Jun. 2019 -- present}
       \resumeItemListStart
         \resumeItem{Developed an educational game to illustrate the effects of physics}
-        \resumeItem{Designed IT training workshops for non-technical people}
-        \resumeItem{Delivered presentations at various international conferences}
+        \resumeItem{Designed and conducted IT training workshops for non-technical individuals}
+        \resumeItem{Presented research findings at various international conferences}
       \resumeItemListEnd
       
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
     \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
       {The Chinese University of Hong Kong}{Sep. 2016 - Feb. 2018}
       \resumeItemListStart
-        \resumeItem{Prepared and led tutorials for undergraduate students}
-        \resumeItem{Provide consultation for underperforming students}
+        \resumeItem{Prepared and delivered tutorials for undergraduate students}
+        \resumeItem{Provided one-on-one consultation to underperforming undergraduate students}
       \resumeItemListEnd
 
     \resumeSubheading
       {Officer}{Hong Kong, China}
       {The Boy's Brigade}{Sep. 2012 -- Aug. 2018}
       \resumeItemListStart
-        \resumeItem{sdf}
+        \resumeItem{Organized and conducted a wide variety of courses covering natural sciences and practical skills}
+        \resumeItem{Provided tutorials in mathematics and physics to HKDSE students}
+        \resumeItem{Led foot drill training to enhance team spirit and discipline}
       \resumeItemListEnd
 
     \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
       {Hong Kong Baptist University}{Aug. 2015 -- May. 2016}
       \resumeItemListStart
-        \resumeItem{sdf}
+        \resumeItem{Organized training sessions for highly talented members of the Physics Olympiad Hong Kong team}
+        \resumeItem{Led the Hong Kong team in the Asian Physics Olympiad 2016}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
 
 %-----------PROJECTS-----------
-\section{Projects}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Funding and knowledge dynamics} $|$ \emph{Python, igraph, Julia, Agents.jl, Kotlin}}{Aug. 2021 -- present}
-          \resumeItemListStart
-            \resumeItem{Created game theory models in Python to explore funding applicant priorities}
-            \resumeItem{Developed agent-based models in Julia to study scholar behaviors}
-            \resumeItem{Built a simulation framework in Kotlin to study knowledge diffusion under information delays}
-            \resumeItem{Analyzed simulated data using Python and igraph to illustrate the relation between efficiency and funding strategy}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Funding criteria and gender biases} $|$ \emph{Python, PyStan, pandas, SQL}}{Jan. 2020 -- May. 2022}
-          \resumeItemListStart
-            \resumeItem{Manipulated data with SQL and pandas}
-            \resumeItem{Collaborated with domain experts to formulate causal relations}
-            \resumeItem{Designed and implemented Bayesian network models to address funding allocation dynamics}
-            \resumeItem{Analyzed data using PyStan and Python to identify gender biases in funding schemes}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
-
-
+\section{Special Secondary School Achievement}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {International Physics Olympiad}{Estonia}
+      {Silver Medalist}{2012}
+  \resumeSubHeadingListEnd
 
 %
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
+\section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and Libraries}{: Ktor, pandas, NumPy, Matplotlib, PyStan} \\
-     \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
+     \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
+     \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
     }}
  \end{itemize}
 
