Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -138,7 +138,7 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
     \resumeSubheading
       {Shatin Pui Yin College}{Hong Kong, China}
-      {HKDSE: Mathematics compulsory (5*) and Extended (5*), Physics (5)}{Sep. 2006 -- Aug. 2012}
+      {HKDSE: Mathematics compulsory (5*) and Extended M2 (5*), Physics (5)}{Sep. 2006 -- Aug. 2012}
   \resumeSubHeadingListEnd
 
 
