--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -188,7 +188,7 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
   \resumeSubHeadingListStart
     \resumeSubheading
       {International Physics Olympiad}{Estonia}
-      {Silver Medalist}{2012}
+      {Silver Medallist}{2012}
   \resumeSubHeadingListEnd
 
 %
