Update resume teacher

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -124,8 +124,8 @@
 
 %-----------EDUCATION-----------
 \section{Summary}
-Social science and physics researcher with a deep passion in education. 
-Experienced in teaching talented and underperforming students.
+Social science and physics researcher with a deep passion for education. 
+Experienced in teaching both talented and underperforming students.
 Dedicated to providing additional Physics Olympiad or STEAM training.
 
 \section{Education}
@@ -150,34 +150,35 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
       {Researcher/Ph.D. Candidate}{Leiden, the Netherlands}
       {Leiden University}{Jun. 2019 -- present}
       \resumeItemListStart
-        \resumeItem{Developed an educational game to illustrate the effects of physics}
+        \resumeItem{Developed an educational game to illustrate physics concepts effectively}
         \resumeItem{Designed and conducted IT training workshops for non-technical individuals}
         \resumeItem{Presented research findings at various international conferences}
       \resumeItemListEnd
       
     \resumeSubheading
+      {Officer}{Hong Kong, China}
+      {The Boy's Brigade}{Sep. 2012 -- Aug. 2018}
+      \resumeItemListStart
+        \resumeItem{Organized and delivered diverse courses covering natural sciences and practical skills}
+        \resumeItem{Provided tutorials in mathematics and physics to HKDSE students}
+        \resumeItem{Led foot drill training, fostering teamwork and discipline among participants}
+      \resumeItemListEnd
+
+    \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
       {The Chinese University of Hong Kong}{Sep. 2016 - Feb. 2018}
       \resumeItemListStart
         \resumeItem{Prepared and delivered tutorials for undergraduate students}
-        \resumeItem{Provided one-on-one consultation to underperforming undergraduate students}
+        \resumeItem{Provided one-on-one consultations, guiding underperforming students towards improvement}
       \resumeItemListEnd
 
-    \resumeSubheading
-      {Officer}{Hong Kong, China}
-      {The Boy's Brigade}{Sep. 2012 -- Aug. 2018}
-      \resumeItemListStart
-        \resumeItem{Organized and conducted a wide variety of courses covering natural sciences and practical skills}
-        \resumeItem{Provided tutorials in mathematics and physics to HKDSE students}
-        \resumeItem{Led foot drill training to enhance team spirit and discipline}
-      \resumeItemListEnd
 
     \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
       {Hong Kong Baptist University}{Aug. 2015 -- May. 2016}
       \resumeItemListStart
         \resumeItem{Organized training sessions for highly talented members of the Physics Olympiad Hong Kong team}
-        \resumeItem{Led the Hong Kong team in the Asian Physics Olympiad 2016}
+        \resumeItem{Led the Hong Kong team in the Asian Physics Olympiad 2016, achieving commendable results}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
