Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -141,6 +141,13 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
       {HKDSE: Mathematics compulsory (5*) and Extended M2 (5*), Physics (5)}{Sep. 2006 -- Aug. 2012}
   \resumeSubHeadingListEnd
 
+\section{Qualifications}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Basic Law and National Security Law Test}{: Pass}
+    }}
+ \end{itemize}
+
 
 %-----------EXPERIENCE-----------
 \section{Experience}
@@ -185,7 +192,7 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
 
 
 %-----------PROJECTS-----------
-\section{Special Secondary School Achievement}
+\section{Special Secondary School Achievements}
   \resumeSubHeadingListStart
     \resumeSubheading
       {International Physics Olympiad}{Estonia}
