--- a/khl/coverletter/coverletter-our-hk.tex
+++ b/khl/coverletter/coverletter-our-hk.tex
@@ -130,7 +130,7 @@ My academic journey commenced in the field of physics. During my master's resear
 
 In addition to my personal knowledge, I can serve as a bridge between the team in Hong Kong and my current institute, the Centre for Science and Technology Studies (CWTS) in Leiden, the Netherlands. CWTS possesses an extensive database encompassing academic publications, patents, social media, and policy documents, which is invaluable for science policy research. Moreover, researchers at CWTS possess expertise in studying science policy across different countries in Europe, the Americas, and Asia. Notably, CWTS enjoys a strong reputation in China, attracting numerous Chinese scholars and fostering collaborative projects on science policy in China. Leveraging these resources and networks, I can contribute to analyzing Hong Kong's potential learnings from other countries and aligning Hong Kong's policies with those of China.
 
-My academic training and experience have also equipped me with solid research skills across different domains. With a strong quantitative background, I am proficient in applying state-of-the-art data analytical methods and modeling tools. As part of my Ph.D. and a personal interest, I have collaboratively and independently developed several software, including a social simulation framework and an educational game. Recognizing the increasing importance of software in social science research, I am adept at supporting the development of research software either independently or in collaboration with other software developers. Throughout my Ph.D., I have collaborated with individuals from diverse backgrounds, including researchers, policymakers, administrators, and engineers, demonstrating my ability to work effectively with different stakeholders and complement each other's weaknesses. Additionally, I have actively engaged in various social events, such as presenting at conferences and organizing workshops, showcasing both my technical and soft skills. These attributes affirm my capability to excel within the policy research team.
+My academic training and experience have also equipped me with solid research skills across different domains. With a strong quantitative background, I am proficient in applying state-of-the-art data analytical methods and modeling tools. As part of my Ph.D. and a personal interest, I have collaboratively and independently developed several software, including a social simulation framework and an educational game. Recognizing the increasing importance of software in social science research, I am adept at supporting the development of research software either independently or in collaboration with other software developers. Throughout my Ph.D., I have collaborated with individuals from diverse backgrounds, including researchers, policymakers, administrators, and engineers, demonstrating my ability to work effectively with different stakeholders and complement each other's weaknesses. Additionally, I have actively engaged in various social events, such as presenting at conferences and organizing workshops, showcasing both my technical and soft skills. These attributes affirm my capability to excel within the foundation.
 
 Thank you for considering my application. I am excited about the opportunity to apply my expertise to research and shape the policies of my home city, Hong Kong. I eagerly anticipate the chance to discuss my qualifications further in an interview.
 
