Update dev years

--- a/khl/cv/contents/education.tex
+++ b/khl/cv/contents/education.tex
@@ -11,8 +11,8 @@
 
 %---------------------------------------------------------
   \cventry
-    %{Ph.D. in Quantitative Science Studies}
-    {Ph.D. in Social and Behavioural Sciences} % Degree
+    {Ph.D. in Quantitative Science Studies}
+    %{Ph.D. in Social and Behavioural Sciences} % Degree
     {Leiden University} % Institution
     {Leiden, The Netherlands} % Location
     {Jun. 2019 - present} % Date(s)
