Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -126,7 +126,7 @@
 \section{Summary}
 Social science and physics researcher with a deep passion for education. 
 Experienced in teaching both talented and underperforming students.
-Dedicated to providing additional Physics Olympiad or STEAM training.
+Dedicated to providing additional Physics Olympiad training and STEAM education.
 
 \section{Education}
   \resumeSubHeadingListStart
@@ -168,7 +168,7 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
       \resumeItemListStart
         \resumeItem{Organized and delivered diverse courses covering natural sciences and practical skills}
         \resumeItem{Provided tutorials in mathematics and physics to HKDSE students}
-        \resumeItem{Led foot drill training, fostering teamwork and discipline among participants}
+        \resumeItem{Led foot drill training for secondary school students, fostering teamwork and discipline among participants}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -179,12 +179,11 @@ Dedicated to providing additional Physics Olympiad or STEAM training.
         \resumeItem{Provided one-on-one consultations, guiding underperforming students towards improvement}
       \resumeItemListEnd
 
-
     \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
       {Hong Kong Baptist University}{Aug. 2015 -- May. 2016}
       \resumeItemListStart
-        \resumeItem{Organized training sessions for highly talented members of the Physics Olympiad Hong Kong team}
+        \resumeItem{Organized training sessions for talented secondary school students}
         \resumeItem{Led the Hong Kong team in the Asian Physics Olympiad 2016, achieving commendable results}
       \resumeItemListEnd
 
