--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -126,7 +126,7 @@
 \section{Summary}
 Social science and physics researcher with a deep passion for education. 
 Experienced in teaching both talented and underperforming students.
-Dedicated to providing additional Physics Olympiad training and STEM education.
+Dedicated to providing additional Physics Olympiad training and STEAM education.
 
 \section{Education}
   \resumeSubHeadingListStart
@@ -204,7 +204,7 @@ Dedicated to providing additional Physics Olympiad training and STEM education.
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
-     \textbf{STEM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
+     \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
     }}
  \end{itemize}
 
